<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment2">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.student.openuwebview.ui.StartFragment"
        android:label="@string/welcome">
        <action
            android:id="@+id/action_startFragment_to_openUFragment"
            app:destination="@id/openUFragment" />
        <action
            android:id="@+id/action_startFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_startFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/openUFragment"
        android:name="com.student.openuwebview.ui.OpenUFragment"
        android:label="OpenU" />
    <fragment
        android:id="@+id/coursesFragment"
        android:name="com.student.openuwebview.ui.CoursesFragment"
        android:label="@string/courses" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.student.openuwebview.ui.LoginFragment"
        android:label="@string/login" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.student.openuwebview.ui.ChatFragment"
        android:label="@string/chat" />
    <fragment
        android:id="@+id/forumFragment"
        android:name="com.student.openuwebview.ui.ForumFragment"
        android:label="@string/forum" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.student.openuwebview.ui.RegisterFragment"
        android:label="Register" />
    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.student.openuwebview.onboarding.ViewPagerFragment"
        android:label="WELCOME">
        <action
            android:id="@+id/action_viewPagerFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/viewPagerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment2"
        android:name="com.student.openuwebview.onboarding.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment2_to_viewPagerFragment"
            app:destination="@id/viewPagerFragment"
            app:popUpTo="@id/splashFragment2"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment2_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/splashFragment2"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>


<!--    app:enterAnim="@anim/slide_in_right"-->
<!--    app:exitAnim="@anim/slide_out_left"-->
<!--    app:popEnterAnim="@anim/slide_in_left"-->
<!--    app:popExitAnim="@anim/slide_out_right"-->