<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".onboarding.screens.FirstScreenPagerFragment">

    <ImageView
        android:id="@+id/image_third_screen"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/third_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_third_screen_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_third_screen_title"
        android:contentDescription="@string/access_from_anywhere_in_the_world" />

    <TextView
        android:id="@+id/tv_third_screen_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arimo_bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/access_from_anywhere_in_the_world"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_third_screen_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/image_third_screen" />

    <TextView
        android:id="@+id/tv_third_screen_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/arimo_bold"
        android:text="@string/third_sceen_subtitle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_third_screen_title" />

    <TextView
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/lemon"
        android:text="@string/finish"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>